--- a/html_files/main_app/room_select.html
+++ b/html_files/main_app/room_select.html
@@ -495,7 +495,7 @@
                 setTimeout(() => {
                     successMessage.remove();
                     console.log('[room_select] 物件選択画面に戻ります');
-                    window.location.href = 'property_select.html';
+                    window.location.href = '/property_select';
                 }, 2000);
                 
             } catch (error) {
