--- a/html_files/main_app/room_select.html
+++ b/html_files/main_app/room_select.html
@@ -372,17 +372,11 @@
                 const mm = String(now.getMonth() + 1).padStart(2, '0');
                 const dd = String(now.getDate()).padStart(2, '0');
                 const completionDate = `${yyyy}-${mm}-${dd}`;
-                // 必要最小限のデータのみ送信
-                const postData = {
-                    action: 'completeInspection',
-                    propertyId: propertyId,
-                    completionDate: completionDate
-                };
-                const response = await fetch(gasWebAppUrl, {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify(postData)
-                });
+                // GETリクエストに変更（POSTでCORSエラーが発生するため）
+                const fetchUrl = `${gasWebAppUrl}?action=completeInspection&propertyId=${encodeURIComponent(propertyId)}&completionDate=${encodeURIComponent(completionDate)}`;
+                console.log('[room_select] GETリクエスト送信:', fetchUrl);
+                
+                const response = await fetch(fetchUrl);
                 const result = await response.json();
                 if (!result.success) {
                     showError(result.error || '検針完了APIでエラーが発生しました');
