--- a/index.html
+++ b/index.html
@@ -6,27 +6,12 @@
   <title>物件管理アプリ</title>
   <link rel="manifest" href="/manifest.json">
   <link rel="stylesheet" href="/css_styles/pwa-styles.css">
-</head>
-<body>
-  <div class="container">
-    <h1>物件管理アプリ</h1>
-    <p>このアプリはPWAとしてインストールできます。</p>
-    <button id="install-btn" onclick="installPWA()" disabled>PWAをインストール</button>
-  </div>
   <script>
-    // サービスワーカー登録
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('load', function() {
-        navigator.serviceWorker.register('/service-worker.js');
-      });
-    }
-    // インストールボタン制御
     let deferredPrompt;
-    const installBtn = document.getElementById('install-btn');
     window.addEventListener('beforeinstallprompt', (e) => {
       e.preventDefault();
       deferredPrompt = e;
-      installBtn.disabled = false;
+      document.getElementById('install-btn').style.display = 'block';
     });
     function installPWA() {
       if (deferredPrompt) {
@@ -42,6 +27,21 @@
     // PWA起動時は物件一覧へリダイレクト
     if (window.matchMedia('(display-mode: standalone)').matches || window.navigator.standalone) {
       window.location.replace('/property_select');
+    }
+  </script>
+</head>
+<body>
+  <div class="container">
+    <h1>物件管理アプリ</h1>
+    <p>このアプリはPWAとしてインストールできます。</p>
+    <button id="install-btn" style="display:none;" onclick="installPWA()">PWAをインストール</button>
+  </div>
+  <script>
+    // サービスワーカー登録
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', function() {
+        navigator.serviceWorker.register('/service-worker.js');
+      });
     }
   </script>
 </body>
