--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           if (choiceResult.outcome === 'accepted') {
             document.getElementById('install-btn').style.display = 'none';
             const msg = document.createElement('div');
-            msg.textContent = 'インストールが完了しました。ホーム画面からアプリを起動できます。';
+            msg.textContent = 'インストールが完了しました。'<br>'ホーム画面からアプリを起動できます。';
             msg.style.marginTop = '24px';
             msg.style.color = '#1976d2';
             msg.style.fontWeight = 'bold';
@@ -41,7 +41,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>物件管理アプリ</h1>
+    <h1>水道検針アプリ</h1>
     <p>このアプリはPWAとしてインストールできます。</p>
     <button id="install-btn" style="display:none;" onclick="installPWA()">PWAをインストール</button>
   </div>
