--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>物件管理アプリ</title>
+  <title>水道検針アプリ</title>
   <link rel="manifest" href="/manifest.json">
   <link rel="stylesheet" href="/css_styles/pwa-materialui.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
